gitops/fluxcd/kubernetes/overlays/k3s/homelab/hajimari/hajimari/ingress.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hajimari-external
  namespace: hajimari
  labels:
    app: hajimari
    # renovate: registryUrl=https://hajimari.io
    helm.sh/chart: hajimari-1.1.1
    app.kubernetes.io/name: hajimari
    app.kubernetes.io/instance: hajimari
    app.kubernetes.io/version: "v0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    #   grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  ingressClassName: nginx
  rules:
  - host: hajimari.homelab.portefaix.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hajimari
            port:
              number: 3000
